# lancedb-robotics-lakehouse-external

./: .gitignore  README.md  SKILLS.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  public-lerobot-benchmark.yml
docker/: rlds-native.Dockerfile
docs/: README.md
docs/manual/: index.md
docs/manual/concepts/: architecture.md  oss-core-vs-enterprise.md  overview.md  storage-and-auth.md  training-loader-report.md
docs/manual/journeys/: enterprise-training-conformance.md  external-context-lookup.md  lerobot-ingest.md  lineage-audit-reports.md  lineage-scoped-context.md  rebuild-loop.md  retention-governance.md  server-side-plan.md  training-report-history.md
docs/manual/reference/: api.generated.md  cli.generated.md  enterprise-training-compatibility.generated.md  tables.generated.md  training_loader_report.v1.schema.json
docs/narratives/: baseline-ingest-to-training-showcase.md  episode-creation-and-recreation.md  feature-set-0-lakehouse-shell.md  feature-set-5-scenario-windowing.md  feature-set-mcap-robustness-and-scale.md  feature-set-typed-field-extraction.md  lance-native-training-datasets.md  reproducible-benchmark-suite.md
examples/: README.md
scripts/: gen_docs_reference.py  regen_lancedb_invocation_audit.py  verify-rlds-native-docker.sh
src/lancedb_robotics/: __init__.py  __main__.py  _mp4.py  align.py  benchmark.py  blob.py  capability_gates.py  captions.py  comparison_plugins.py  connections.py  curate.py  dataset.py  dataset_export.py  distributions.py  embeddings.py  enrich.py  enterprise_conformance.py  episodes.py  evidence.py  evidence_catalog.py  export.py  external_context_catalog.py  extract.py  indexing.py  ingest.py  invocation_conformance.py  keyframe_maps.py  lake.py  lerobot_object_store_conformance.py  lerobot_object_store_manifest.py  lerobot_object_store_validation.py  lineage.py  lineage_audit_catalog.py  lineage_graph.py  lineage_hooks.py  lineage_integrations.py  maintenance.py  materialization.py  metadata_plugins.py  projections.py  (+25 more)
src/lancedb_robotics/adapters/: __init__.py  decoders.py  flatbuffer.py  lerobot_adapter.py  mcap_adapter.py  rosbag_adapter.py
src/lancedb_robotics/cli/: __init__.py  align.py  bench.py  curate.py  dataset.py  distributions.py  embed.py  episodes.py  export.py  ingest.py  inspect.py  lake.py  lineage.py  lineage_context.py  quality.py  scenarios.py  search.py  train.py  video.py  writeback.py
src/lancedb_robotics/schemas/: __init__.py
tests/: conftest.py  test_adapters.py  test_align.py  test_aligned_training_dataset.py  test_attachments_metadata.py  test_benchmark.py  test_blob_encoding.py  test_capability_gates.py  test_cli_bench.py  test_cli_dataset.py  test_cli_embed.py  test_cli_embeddings.py  test_cli_enrich.py  test_cli_export.py  test_cli_groups.py  test_cli_ingest.py  test_cli_inspect.py  test_cli_lake.py  test_cli_lineage.py  test_cli_quality.py  test_cli_scenarios.py  test_cli_search.py  test_cli_search_image.py  test_cli_smoke.py  test_cli_tracker.py  test_cli_train.py  test_cli_writeback.py  test_connections.py  test_curate.py  test_curate_feedback_plan.py  test_dataset.py  test_dataset_export.py  test_decoders.py  test_distributions.py  test_docs_reference_current.py  test_embedding_pipeline.py  test_embeddings.py  test_enrich.py  test_enterprise_conformance.py  test_episodes.py  (+80 more)
tests/fixtures/: crc_corrupt.mcap  flatbuffer_foxglove.mcap  incomplete.mcap  make_crc_corrupt_mcap.py  make_flatbuffer_foxglove_mcap.py  make_incomplete_mcap.py  make_lz4_slice_mcap.py  make_records_mcap.py  make_ros2_imu_mcap.py  make_rosbag_fixtures.py  make_sample_mcap.py  make_split_recording.py  make_summaryless_mcap.py  make_truncated_mcap.py  make_zstd_slice_mcap.py  mini_run_manifest.json  records.mcap  ros1_string.bag  ros1_string.mcap  ros2_imu.mcap  ros2_string.mcap  slice_mixed_lz4.mcap  slice_ros1_zstd.mcap  summaryless.mcap  summaryless_indexed.mcap  truncated.mcap
tests/fixtures/ros2_string_bag/: metadata.yaml  ros2_string_bag.db3
tests/fixtures/split_recording/: metadata.yaml  recording_0.mcap  recording_1.mcap  recording_2.mcap
tests/snapshots/: cli_top_level_help.txt  showcase_summary.txt
